--- a/demo/demo.html
+++ b/demo/demo.html
@@ -2,11 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-
-    <meta charset="UTF-8">
-    <title>Title</title>
-
+    <title>deferred load demo</title>
+ 
     <link rel="stylesheet" href="./css/animate.min.css"/>
     <script src="//cdn.bootcss.com/jquery/2.2.3/jquery.min.js"></script>
     <script src="./deferred-load-image.js"></script>
